<resources>
    <string name="client_id" translatable="false">453297139558-an8ht01qc9flek0dkrl41sc8e8v8c72p.apps.googleusercontent.com</string>

    <string name="app_name">Quiz Play</string>
    <string name="joinQuiz">Rejoignez un quiz !</string>
    <string name="enterCode">Entrez un code</string>
    <string name="hintCode">Code du quiz</string>
    <string name="btnJoin">Rejoindre</string>
    <!-- Pseudo Activity -->
    <string name="ChooseName">Choisissez votre pseudo !</string>
    <string name="hintPseudo">Pseudo</string>
    <string name="btnParti">"C'est parti !"</string>
    <!-- Quiz Activity -->
    <string name="lorem" translatable="false">Lorem ipsum, dolor sit amet</string>
    <string name="leaderboard">Classement</string>
    <string name="bestScores">Meilleurs pointages</string>
    <string name="startQuiz">Commencer le Quiz!</string>
    <!-- Toasts -->
    <string name="toastEnterCode">Vous devez rentrer un code pour rejoindre un quiz.</string>
    <string name="toastEnterName">Vous devez choisir un pseudo pour commencer le quiz.</string>
    <string name="toastNoQuizFound">Le code entré correspond à aucun quiz.</string>
    <string name="toastNoAcess">Vous n\'avez pas accès au serveur</string>
    <string name="toastNoQuestionsInQuiz">Vous ne pouvez pas rejoindre un quiz sans questions</string>
    <string name="toastRoomDeleted">La salle a été supprimée</string>
    <string name="toastAuthFailed">Authentification échouée.</string>

    <string name="answerTrue">Vrai</string>
    <string name="answerFalse">Faux</string>
    <string name="skipQuestion">Passer cette question</string>
    <string name="nextQuestion">Passer à la question suivante</string>
    <string name="finishQuiz">Terminer le Quiz</string>
    <string name="timesup">Temps écoulé!</string>
    <string name="rightAnswer">Bonne réponse!</string>
    <string name="wrongAnswer">Mauvaise réponse!</string>
    <string name="submitAnswer">Soumettre ma réponse</string>
    <plurals name="secondsRemaining">
        <item quantity="zero">%d seconde restante</item>
        <item quantity="one">%d seconde restante</item>
        <item quantity="other">%d secondes restantes</item>
    </plurals>

    <string name="quizCompleted">Quiz terminé!</string>
    <string name="yourScore">Votre pointage :</string>
    <string name="returnHomePage">Retourner à l\'accueil</string>
    <plurals name="points">
        <item quantity="zero">%d point</item>
        <item quantity="one">%d point</item>
        <item quantity="other">%d points</item>
    </plurals>
    <plurals name="pts">
        <item quantity="zero">%d pt</item>
        <item quantity="one">%d pt</item>
        <item quantity="other">%d pts</item>
    </plurals>
    <plurals name="participants">
        <item quantity="one">%d participant</item>
        <item quantity="other">%d participants</item>
    </plurals>

    <string name="welcome">Bonjour %1$s</string>
    <string name="change_username">Changer de pseudo</string>
    <plurals name="number_of_questions">
        <item quantity="zero">Aucune questions</item>
        <item quantity="one">%d question</item>
        <item quantity="other">%d questions</item>
    </plurals>

    <string name="logout">Déconnexion</string>
    <string name="join">Rejoindre un quiz</string>
    <string name="list">Liste des quiz</string>
    
    <string name="guestLogin">Connexion invité</string>

    <string name="toastErrorAccessingQuiz">Une erreur est survenu en essayant d\'accéder à ce Quiz</string>
    <string name="quizTitle">Titre du Quiz</string>
    <string name="questionNumber">Nombre de questions</string>
    <string name="questionNb">Nb. de questions</string>
    <string name="author">Auteur</string>
    <string name="dateCreation">Date de création</string>
    <string name="sortBy">Trier par :</string>

    <!--Drawer-->
    <string name="open_drawer">Ouvrir</string>
    <string name="close_drawer">Fermer</string>

</resources>