<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityDeferredQuiz.TrueFalseActivity"
    android:background="@color/colorPrimary">

    <AbsoluteLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:layout_width="600dp"
            android:layout_height="600dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/colorPrimaryLight"
            android:layout_x="150dp"
            android:layout_y="-200dp"/>

        <View
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/colorPrimaryLight"
            android:layout_x="-200dp"
            android:layout_y="450dp"/>

    </AbsoluteLayout>

    <View
        android:layout_width="80dp"
        android:layout_height="160dp"
        android:background="@drawable/triangle"
        android:backgroundTint="@color/colorAccent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginBottom="20dp"
        android:id="@+id/timeLimit"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tvTime"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:textColor="@color/textColor"
            android:fontFamily="@font/open_sans"/>

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/progressTime"
            android:indeterminate="false"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:progressDrawable="@drawable/progress_circle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/questionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/lorem"
            android:textSize="20sp"
            android:textColor="@color/textColor"
            android:fontFamily="@font/titan_one"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioTrue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="answer"
                android:text="@string/answerTrue"
                android:textSize="20sp"
                android:textColor="@color/textColor"
                android:fontFamily="@font/open_sans"
                android:buttonTint="@color/textColor"/>

            <RadioButton
                android:id="@+id/radioFalse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="answer"
                android:text="@string/answerFalse"
                android:textSize="20sp"
                android:textColor="@color/textColor"
                android:fontFamily="@font/open_sans"
                android:buttonTint="@color/textColor"/>
        </RadioGroup>

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:textSize="18sp"
            android:visibility="invisible"
            android:fontFamily="@font/titan_one"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nextQuestion"
        android:onClick="nextQuestion"
        android:text="@string/skipQuestion"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:fontFamily="@font/open_sans" />

    <ProgressBar
        android:id="@+id/progressQuiz"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/quizTitle"
        android:text="@string/lorem"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:fontFamily="@font/open_sans"/>


</LinearLayout>
</RelativeLayout>