<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <AbsoluteLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:layout_width="600dp"
            android:layout_height="600dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/colorPrimaryLight"
            android:layout_x="150dp"
            android:layout_y="-200dp"/>

        <View
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/colorPrimaryLight"
            android:layout_x="-200dp"
            android:layout_y="450dp"/>

        <View
            android:layout_width="125dp"
            android:layout_height="250dp"
            android:background="@drawable/triangle"
            android:backgroundTint="@color/colorAccent"
            android:layout_x="300dp"
            android:layout_y="500dp"/>

    </AbsoluteLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quizCompleted"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="40dp"
            android:textSize="50sp"
            android:textColor="@color/textColor"
            android:fontFamily="@font/titan_one" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yourScore"
            android:textSize="30sp"
            android:textColor="@color/textColor"
            android:fontFamily="@font/open_sans"/>

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:textSize="50sp"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:fontFamily="@font/titan_one"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bestScores"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textColor="@color/textColor"
            android:fontFamily="@font/titan_one"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="#1"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="#FFD700"
                    android:fontFamily="@font/open_sans"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="Titouan"
                    android:textSize="20sp"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/open_sans"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="35 pts"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/open_sans"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/borderColor"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="#2"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="#C0C0C0"
                    android:fontFamily="@font/open_sans"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="Jean-Martin"
                    android:textSize="20sp"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/open_sans"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="33 pts"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/open_sans"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/borderColor"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="#3"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="#CD7F32"
                    android:fontFamily="@font/open_sans"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="Michel"
                    android:textSize="20sp"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/open_sans"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="29 pts"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/open_sans"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/startQuiz"
        android:onClick="back"
        android:text="@string/returnHomePage"
        android:textSize="20sp"
        android:background="@drawable/button"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:fontFamily="@font/open_sans"/>

</LinearLayout>
</RelativeLayout>